--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,112 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@100;200;300;400;500;600;700&family=Oswald&family=Roboto:ital,wght@0,400;1,700&display=swap');
 
 body {
-  font-family: "Noto Serif Display";
+    padding: 0;
+    margin: 0;
 }
 
-header  {
-  background-color:#8a7e7d;
-  top: 0;
-  left: 0;
+.header-main {
+    width: 100%;
+    height: 60px;
+    background-color: #847373;
+    display: flex;
+    justify-content: space-between;
 }
 
-#logo {
-  display: inline-block;
+.header-main-logo {
+    width: fit-content;
+    height: 100%;
+    background-color: #847373;
+    padding-left: 30px;
 }
 
-.nav-justified {
-  display: inline-block;
-  width: 100%;
+.header-main-links {
+    width: fit-content;
+    height: 100%;
+    background-color: #847373;
 }
 
-#call-to-action {
-  font-weight: 700;
-  color: #453f3e;
-  display: inline-block;
+.header-main-links ul {
+    list-style: none;
+    margin-right: 20px;
 }
 
-#call-to-action:hover {
-  color: #dbd0d0;
+.header-main-links ul li {
+    display: inline;
 }
 
+.header-main-links ul li a {
+    padding: 5px 10px;
+    font-family: "Noto Serif Display", sans-serif;
+    color: #fff;
+    text-decoration: none;
+}
+
+.header-main-links ul li a:hover {
+    transition: all 0.3s ease 0s;
+    color: #dad1d1;
+    text-decoration: none;
+}
+
+.header-main-cta {
+    width: 120px;
+    height: 100%;
+    display: flex;
+    padding-right: 30px;
+    background-color: #847373;
+}
+
+.header-main-cta a {
+    font-family: "Noto Serif Display",
+        sans-serif;
+    color: #fff;
+    align-self: center;
+    margin-left: 20px;
+    margin-bottom: 5px;
+    line-height: 60px;
+    text-decoration: none;
+}
+
+.header-main-cta a:hover {
+    transition: all 0.3s ease 0s;
+    color: #dad1d1;
+}
+
+.header-main-logo a {
+    text-decoration: none;
+    font-family: "Noto Serif Display",
+        sans-serif;
+    color: #fff;
+    font-weight: 600;
+    font-size: 1.5rem;
+    line-height: 60px;
+}
+
+.header-main-logo a:hover {
+    transition: all 0.3s ease 0s;
+    color: #dad1d1;
+    text-decoration: none;
+}
+
+.links-cta-container {
+    display: flex;
+}
+
+img {
+    width: 100%;
+    height: 100vh;
+    /*
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 60px;
+    background-color: #847373;*/
+}
+
+.footer-main {
+    background-color: #dad1d1;
+    width: 100%;
+    padding: 60px 0 100px;
+
+}
